@@ -755,8 +755,9 @@ struct restrictlist {
 #define RES_DEMOBILIZE		0x400	/* demobilize association */
 
 #define	RES_ALLFLAGS \
-    (RES_IGNORE|RES_DONTSERVE|RES_DONTTRUST|RES_NOQUERY\
-    |RES_NOMODIFY|RES_NOPEER|RES_NOTRAP|RES_LPTRAP|RES_LIMITED|RES_VERSION)
+    (RES_IGNORE | RES_DONTSERVE | RES_DONTTRUST | RES_NOQUERY | \
+     RES_NOMODIFY | RES_NOPEER | RES_NOTRAP | RES_LPTRAP | \
+     RES_LIMITED | RES_VERSION | RES_DEMOBILIZE)
 
 /*
  * Match flags
